--- a/NameSorter/NameSorter.csproj
+++ b/NameSorter/NameSorter.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IO.cs" />
+    <Compile Include="ISorter.cs" />
     <Compile Include="NameSorter.cs" />
     <Compile Include="NameUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
